# forensic-doc-search

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
config/: logging.yaml
data/: README.md
data/seeds/: seed_snippets.jsonl
docs/: 01_requirements_and_tasks.md  02_architecture.md  03_eval_results.md  04_design_rationale.md  05_interview_prep.html  05_interview_prep.md  06_model_sweep.md
scripts/: generate_dataset.py  make_diagram.py  md_to_html.py  model_sweep.py  wait_for_qdrant.py
src/ragforce/: __init__.py  cli.py  config.py  logging_setup.py  models.py
src/ragforce/api/: __init__.py  app.py  deps.py  filters.py  routes.py  schemas.py
src/ragforce/chunking/: __init__.py  chunker.py  separators.py
src/ragforce/dataset/: __init__.py  generator.py
src/ragforce/embedding/: __init__.py  dense.py  rerank.py  sparse.py
src/ragforce/eval/: __init__.py  evaluate.py  metrics.py
src/ragforce/loaders/: __init__.py  base.py  eml_loader.py  json_loader.py  metadata.py  pdf_loader.py  txt_loader.py
src/ragforce/pipeline/: __init__.py  ingest.py
src/ragforce/store/: __init__.py  points.py  qdrant_store.py  schema.py
tests/: conftest.py  test_chunking.py  test_eval_helpers.py  test_filters.py  test_generator.py  test_loaders.py  test_metrics.py  test_points.py  test_schemas.py  test_store_integration.py
ui/: streamlit_app.py
