[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragforce"
version = "0.1.0"
description = "On-prem RAG pipeline for forensic document search (semantic + metadata + hybrid)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Roei Michael" }]

# Runtime dependencies. NOTE: sentence-transformers pulls torch (heavy). For a
# CPU-only install, pre-install the CPU wheel:
#   pip install torch==2.3.1 --index-url https://download.pytorch.org/whl/cpu
dependencies = [
    "sentence-transformers==3.0.1",  # local dense embeddings (HEAVY: torch + transformers)
    "qdrant-client==1.10.1",         # self-hosted vector store client (Query API: prefetch + RRF)
    "fastembed==0.3.6",              # BM25 sparse vectors for native hybrid search
    "pypdf==4.2.0",                  # PDF text extraction
    "reportlab==4.2.0",              # generate .pdf docs in the synthetic dataset
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",      # config.yaml + .env layered settings
    "PyYAML==6.0.1",
    "python-dotenv==1.0.1",
    "typer==0.12.3",                 # `rag` CLI
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "httpx==0.27.0",                 # UI -> API client + FastAPI TestClient
]

[project.optional-dependencies]
ui = ["streamlit==1.36.0"]
dev = ["pytest==8.2.2", "ruff==0.5.0", "black==24.4.2"]

[project.scripts]
rag = "ragforce.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires a live Qdrant instance"]
