[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragforce"
version = "0.1.0"
description = "On-prem RAG pipeline for forensic document search (semantic + metadata + hybrid)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Roei Michael" }]

# Runtime dependencies. NOTE: sentence-transformers pulls torch (heavy). For a
# CPU-only install, pre-install the CPU wheel:
#   pip install torch==2.12.0 --index-url https://download.pytorch.org/whl/cpu
dependencies = [
    "sentence-transformers==5.5.1",  # dense embeddings + cross-encoder reranker (HEAVY: torch)
    "transformers==5.12.0",
    "torch==2.12.0",
    "numpy<3",                       # NumPy-2 ABI must match torch/transformers
    "qdrant-client==1.13.3",         # matches the Qdrant v1.13 server in docker-compose
    "fastembed==0.8.0",              # BM25 sparse vectors for native hybrid search
    "pypdf==6.13.2",                 # PDF text extraction
    "reportlab==4.5.1",              # generate .pdf docs in the synthetic dataset
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",     # config.yaml + .env layered settings
    "PyYAML==6.0.3",
    "typer==0.26.7",                 # `rag` CLI
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "httpx==0.28.1",                 # UI -> API client + FastAPI TestClient
]

[project.optional-dependencies]
ui = ["streamlit==1.41.1"]
dev = ["pytest==8.2.2", "ruff==0.5.0", "black==24.4.2"]

[project.scripts]
rag = "ragforce.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires a live Qdrant instance"]
